@@ -3,6 +3,7 @@
 	* data/bg/collar.shp: leather collar paperdoll art (by servus)
 	* data/bg/*gorget.shp: fixed female gorgets
 	* data/bg/hawk.shp: tweaked hawk on female shoulder a bit
+	* data/bg/hoods.shp: hoods paperdoll art (by servus)
 
 2004-02-11  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* data/bg/shoes.shp: shoes paperdoll art
